--- a/thingy.html
+++ b/thingy.html
@@ -11,7 +11,8 @@
 <body>
 <svg id="canvas" width="80%" viewBox="0 0 600 350">
 </svg>
-
+<script src="helper.js"></script>
 <script src="thingy.js"></script>
+
 </body>
 </html>
